*gitlab-ci-multi-runner-1.11.1 (16 Mar 2017)

  16 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile-1.11.1.patch, +gitlab-ci-multi-runner-1.11.1.ebuild:
  dev-vcs/gitlab-ci-multi-runner:   Added ebuild for gitlab-ci-multi-
  runner-1.11.1

*gitlab-ci-multi-runner-1.10.4 (15 Feb 2017)

  15 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile-1.10.4.patch, +gitlab-ci-multi-runner-1.10.4.ebuild,
  gitlab-ci-multi-runner-1.9.2.ebuild:
  dev-vcs/gitlab-ci-multi-runner:  added ebuild for gitlab-ci-runner-1.10.4

*gitlab-ci-multi-runner-1.8.0 (23 Nov 2016)

  23 Nov 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile-1.8.0.patch, +gitlab-ci-multi-runner-1.8.0.ebuild:
  dev-vcs/gitlab-ci-multi-runner:  added ebuild for gitlab-ci-multi-runner-1.8.0

  25 Oct 2016; Manuel Friedli <manuel@fritteli.ch>
  files/gitlab-ci-multi-runner.init, gitlab-ci-multi-runner-1.7.0.ebuild:
  dev-vcs/gitlab-ci-multi-runner:  install init script, set up required
  directories ... taken from gitlab-ci-multi-runner-bin

  24 Oct 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile.patch, -ChangeLog,
  -gitlab-ci-multi-runner-1.4.1.ebuild, -gitlab-ci-multi-runner-1.5.0.ebuild,
  -gitlab-ci-multi-runner-1.6.0.ebuild, files/gitlab-ci-multi-runner.init,
  gitlab-ci-multi-runner-1.7.0.ebuild, metadata.xml:
  dev-vcs/gitlab-ci-multi-runner:  added source version of gitlab-ci-multi-
  runner; mostly copied from the mrueg overlay, but with some additional patches