@@ -19,10 +19,14 @@ DIST gitlab-ci-multi-runner-1.8.0.tar.gz 3541906 SHA256 0636134f34fd03b1e1407374
 DIST gitlab-ci-multi-runner-1.9.2-prebuilt-arm.tar.xz 16002708 SHA256 c4f7297865fafa4e7841e513a26b334cf9f29ad6d7ec4b12381d6031fa6f9648 SHA512 e1d905048bbfb1415f93a443e457ae47cd7f969eeae82f6dc5bcbdce37e2aa4219a97b97080c8b7767523490017cd8ec0fbf681375e27348e87c4d230db844ae WHIRLPOOL 0b76317c29b81dd53c7ae4c2b9f6bcdc7bcb28e6d5101a45f8c4eccf11259e88f2eac7751e84e6f5b3e91298e32980cabd1a1fd07c0cc260dfdde9e479f9c116
 DIST gitlab-ci-multi-runner-1.9.2-prebuilt-x86_64.tar.xz 8717016 SHA256 7d0759dd04f930a231c1a713d8e44a149666112ff1d841c5173847a373496278 SHA512 aaf1b859dd353bca3810ebb85dca0fadbf7f728b262ef00f6a793e9eaf100a05466f26a8bd55acc0270876e5725519941f6086bb375d9f9285fce7f5bf66351c WHIRLPOOL 7e5af9b63feb36ba4e09b12faaa05cb31b453f8f98ded396005429db1f392cb370c75f0c9ddfc07e169cf77f9dceb4abac5abd195a30e2a3ccb03819275f55a5
 DIST gitlab-ci-multi-runner-1.9.2.tar.gz 3563622 SHA256 ed480b29f5dd305758e1158a7a2d60ad892bf3b39fc48903861b241c7391e920 SHA512 7721cc80cd9abaf5ab44f53836e7718eb2df360cea378f4898ef6e9d6b671a09df1e69b70ac99ed8c6c042af9da6415e614db52b5c1e9476bbfe72e146628f04 WHIRLPOOL accb7458dd7ce1334e66f76ed90d970c5e6974505a2376a3e0c9e42d7169986aa18ed9dc64f11dac1366b42b4efddd18e1baa072d4f56e57d3a6c6300ee1f3bb
+DIST gitlab-ci-multi-runner-9.3.0-prebuilt-arm.tar.xz 9108608 SHA256 48b91ec516c9f1ac37c41392249875dba3217c240d31c7a4cc8ca3d159db59f5 SHA512 e21f773ddcbb172c3a3e8c0d3c916bc4f0348a71c89cc99613fa714edfeb61a02e32bb35c12e9d894b22921eb51d262e12f19daa3cbbfe4a3dc2c9ea2b9c19d1 WHIRLPOOL 8f9f7171e2a04eccb28d0b16a03de577abd05e0607039542e3d5dc63bfc4bc536001f53b68057b9de81130dd7fcce14f65e958ecc81fde089dbf5b745b42453a
+DIST gitlab-ci-multi-runner-9.3.0-prebuilt-x86_64.tar.xz 11123268 SHA256 3a5f832ae12bc1358a98fbcd296f8b5801162de34c1cd3c5933a1a2ab22051a3 SHA512 079c22c4e4e72dec218c1f6ddbebe2ea8da1f118b4f4ddb97f0cf28078f5009f1b900b5106ee147e113c9bb0a6b08b05af1bd36c7d0e1da5caa815ef4ec34a62 WHIRLPOOL 77e454af031c7fb18210bb83812f06db6790a71b7db8d3e95096e0d941703377b20ddb76ab78de7180981443dfd20aaeeb59fa2470759454dc933f6211444ea0
+DIST gitlab-ci-multi-runner-9.3.0.tar.gz 3188309 SHA256 e0cc29f3962ac655336f67159c59b44a8c6a4b7f969963e8103ff84872a0b98f SHA512 c47c88bdf6e69ca7bd5d62f1c845b6aaa014241093ec59489d2306eb3f163f1cc1424af4de2d3f1903c96f817fb981c8cf9ada7787561c1638297a0426653677 WHIRLPOOL 1f8fa03c49ced02259283f864c9ffd6b62e3cb7926e58e31cab2ddb5562b2af95398817a3dd6e18d04d0e53a4c2ce0f3bb2cc4c99dea461ad32fbc7375fffc6c
 EBUILD gitlab-ci-multi-runner-1.10.4.ebuild 3266 SHA256 403a1b8eafa8bc74582cbdf7cd90b9c18ee72e1a386bae07fecb6adfcd56fece SHA512 802c5fafcdf7b997115bf70c01b168499bfd1b0cf78195a414ccb0ca1c5f58da3eeb5c8eb3d1960b049b0509e92682e13dac7a80549bf5f9f7c818d0f931ffd0 WHIRLPOOL 616be2cfd835f9912f0698321a230b2d242251556a519541dea18b9673f3b84d32d4095104d5620d326dc5db7934a9c222ca1d92cc157bcca341dd5862f03723
 EBUILD gitlab-ci-multi-runner-1.11.1.ebuild 3267 SHA256 a63c1a0112653c298ed03bda0108d013563dbf70399628c48106af4a2564aa66 SHA512 65ca42ea46321ee37fc9e5683c923c0f1f3670d79c1ea9ec3b876de8962ef665c66bf38d19462981f689b3db3b4c46d1bef58dce0bab20c39ad30009db3a6ebe WHIRLPOOL bdf42cc264767ccbbbbda661edb61529d60951f8774a001cfea3900c670ff3310747fa86b1fd588e39d14851d018fa9d5a7fc1973e37e1a7a85489b5d5f69fc5
 EBUILD gitlab-ci-multi-runner-1.7.0.ebuild 3250 SHA256 fc9f976619ff9ddedaceee812dd2babcb1fb7d7236868368d23a5b67b60bd08b SHA512 276835a37b5be71c8663f92bb093c568ecdcae69d45a88a9ce3ccf896cefd3d59a7f8bfce43eed7de72744e4a60b110b8ca9ae8c2fed94f62c0da475e5c40a50 WHIRLPOOL cc4796822e8443f81f958c8fa39475fb1b168ca06b7e8c38f148b91b77da033c1113c88dd818aaf14265ea07ade5de367235168cdf6e2ccb276ffd45538e9812
 EBUILD gitlab-ci-multi-runner-1.8.0.ebuild 3258 SHA256 d54d70f365868526144decb5671c834bf259d8b8659ec57a8ed9cd55cb6589da SHA512 7023a29d0615b986ef6d0fb0f2ca3ba9f0c0cca095b739cb7da63eb13cb4bee413978807032a674bd5876da9eda198a8fbb11be44c5fe43099e8e98148524b10 WHIRLPOOL c77aaa33c1d24a278cf53d63aa54052c5bddc5c671d2189457b209dcd8a8bf4c911f50be6478c613ba111a709f500f2fb4ba98399fc78a5ece897c852b79d4a4
 EBUILD gitlab-ci-multi-runner-1.9.2.ebuild 3258 SHA256 2d753e9effbba47ddce697875a94572ea44a866fd4988924d38c5f3e87030f14 SHA512 7e691285841aad5fd200e83ed039cf24f3185d18d4b55545f2f325b9fbb6affc30e54ec1aa104799d3cdbfbdbfc4ad96c481485e8f5ce40753ad17b4dc5084d9 WHIRLPOOL 6b00e7b8446c6b78502f2fca6dcf752273245a8a71830fb968a286ae6cf1f0029285a547e0c568ae668315006a39cf9880e0db384504f428538c4810e11805f6
-MISC ChangeLog 1527 SHA256 f69fb48fa08aff1dc4e751af5dc0035289aaf39c4fb4511b680a938a30bbc311 SHA512 e94da9dd3a9cadf9461e3536a1ea632b16e5704735f30fa47da08652c7bada1d6d0823dde5cdeffeef0787a8ec6a8fe357b841cb4a59e9c345702c113a4a0f10 WHIRLPOOL 50cbf5c714f6a4dc8203a588095e9540157ef3f8d9e406910b93cdc46402bfbdf76a0e5f23e90d4fb25142a222b4c95004c893657d7e73cb3fedeeb0dcd2fe57
+EBUILD gitlab-ci-multi-runner-9.3.0.ebuild 1724 SHA256 9856b976332ff77ec8a4c2a30ce5d6911312303d3c6cbc4b07c691350f9a55dd SHA512 2abae131b8232b52f87485548add900a4bcb4e0be8deb86652d751507785172c7c854703c47fc802ac985312343c32f720c8066c686424a84ede85271e94d0fa WHIRLPOOL db6e448cad522ba456bd9aded04a1d4c554cf9f621ee41ceea2cc882130c5e883567aac4d4c99c8aee3f275d56bd685a6937bb5edb135cf680616d095a75ade1
+MISC ChangeLog 1762 SHA256 07d0e0a71df9d56a3051fb8226c7cac53407129bfc1b150ad4cc56afb6606c2e SHA512 0fb198b9d3618cd18bf2bcd2a1a024913b15f03874688da32a13701a13f1810afc0a002da956735af41e01ab6e79ceb579237a67a46b91018d036575d87599c8 WHIRLPOOL 70765a73589c597af5a7a11fce10af4f133997bf85e1226827d9261a3afebc24bad2cc88eabcf1d9d3581bd3b2d136feb0a1948028f0963e4ae11c81adff7712
 MISC metadata.xml 329 SHA256 f0ae08a64aa32a07486e744ce11ac5448770b7320454015bcd065e312fcb5e9c SHA512 11e4eaf25633c5979e5243350bdf2ddc6d9dca06ab54ec38359591f1d002ea2a224e53b3e6c4ac53b5b2e795a87769fdbd97c547b008272e0a1491141f422e5d WHIRLPOOL ab2c1cb3d9aff1f757b49633f94d4b98da4b83dadab12ab8d869f9e1f6763b3125010147472e58e910e7fc42da262dbd69a1bf3939f3720a79ab4329184b4c35
